--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@heroui/theme": "2.4.23",
     "@heroui/toast": "2.0.17",
     "@heroui/tooltip": "^2.2.24",
-    "@heroui/user": "2.2.22",
+    "@heroui/user": "^2.2.22",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.28",
     "clsx": "2.1.1",
