--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@heroui/card": "2.2.25",
     "@heroui/chip": "2.2.22",
     "@heroui/code": "2.2.21",
+    "@heroui/date-picker": "^2.3.28",
     "@heroui/divider": "2.2.20",
     "@heroui/drawer": "2.2.24",
     "@heroui/dropdown": "^2.3.27",
     "@heroui/form": "2.1.27",
     "@heroui/framer-utils": "2.1.23",
     "@heroui/image": "2.2.17",
-    "@heroui/input": "2.4.28",
+    "@heroui/input": "^2.4.28",
     "@heroui/kbd": "2.2.22",
     "@heroui/link": "2.2.23",
     "@heroui/listbox": "2.3.26",
@@ -34,7 +35,7 @@
     "@heroui/pagination": "^2.2.24",
     "@heroui/popover": "2.3.27",
     "@heroui/progress": "2.2.22",
-    "@heroui/radio": "2.3.27",
+    "@heroui/radio": "^2.3.27",
     "@heroui/react-utils": "2.1.14",
     "@heroui/scroll-shadow": "2.3.18",
     "@heroui/select": "2.4.28",
