--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@heroui/table": "^2.2.27",
     "@heroui/tabs": "^2.2.24",
     "@heroui/theme": "2.4.23",
-    "@heroui/toast": "2.0.17",
+    "@heroui/toast": "^2.0.17",
     "@heroui/tooltip": "^2.2.24",
     "@heroui/user": "^2.2.22",
     "@react-aria/ssr": "3.9.10",
@@ -59,7 +59,8 @@
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-signature-canvas": "^1.1.0-alpha.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
