--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroui/badge": "2.2.17",
     "@heroui/button": "^2.2.27",
     "@heroui/card": "2.2.25",
+    "@heroui/checkbox": "^2.3.27",
     "@heroui/chip": "2.2.22",
     "@heroui/code": "2.2.21",
     "@heroui/date-picker": "^2.3.28",
@@ -38,7 +39,7 @@
     "@heroui/radio": "^2.3.27",
     "@heroui/react-utils": "2.1.14",
     "@heroui/scroll-shadow": "2.3.18",
-    "@heroui/select": "2.4.28",
+    "@heroui/select": "^2.4.28",
     "@heroui/skeleton": "2.2.17",
     "@heroui/snippet": "2.2.28",
     "@heroui/spacer": "2.2.21",
