--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@heroui/user": "^2.2.22",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.28",
+    "@tanstack/react-form": "^1.25.0",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
@@ -61,7 +62,8 @@
     "next-themes": "0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-signature-canvas": "^1.1.0-alpha.2"
+    "react-signature-canvas": "^1.1.0-alpha.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
